seaqt/QtWidgets/gen_qgesture.h

typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QGesture QGesture;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPanGesture QPanGesture;
typedef struct QPinchGesture QPinchGesture;
typedef struct QPointF QPointF;
typedef struct QTimerEvent QTimerEvent;
typedef struct VirtualQGesture VirtualQGesture;
typedef struct QGesture_VTable{
	void (*destructor)(VirtualQGesture* self);
	QMetaObject* (*metaObject)(const VirtualQGesture* self);
	void* (*metacast)(VirtualQGesture* self, const char* param1);
	int (*metacall)(VirtualQGesture* self, int param1, int param2, void** param3);
	bool (*event)(VirtualQGesture* self, QEvent* event);
	bool (*eventFilter)(VirtualQGesture* self, QObject* watched, QEvent* event);
	void (*timerEvent)(VirtualQGesture* self, QTimerEvent* event);
	void (*childEvent)(VirtualQGesture* self, QChildEvent* event);
	void (*customEvent)(VirtualQGesture* self, QEvent* event);
	void (*connectNotify)(VirtualQGesture* self, QMetaMethod* signal);
	void (*disconnectNotify)(VirtualQGesture* self, QMetaMethod* signal);
}QGesture_VTable;
VirtualQGesture* QGesture_new(const QGesture_VTable* vtbl, size_t vdata);
VirtualQGesture* QGesture_new2(const QGesture_VTable* vtbl, size_t vdata, QObject* parent);
QMetaObject* QGesture_metaObject(const QGesture* self);
void* QGesture_metacast(QGesture* self, const char* param1);
int QGesture_metacall(QGesture* self, int param1, int param2, void** param3);
struct miqt_string QGesture_tr(const char* s);
int QGesture_gestureType(const QGesture* self);
int QGesture_state(const QGesture* self);
QPointF* QGesture_hotSpot(const QGesture* self);
void QGesture_setHotSpot(QGesture* self, QPointF* value);
bool QGesture_hasHotSpot(const QGesture* self);
void QGesture_unsetHotSpot(QGesture* self);
void QGesture_setGestureCancelPolicy(QGesture* self, int policy);
int QGesture_gestureCancelPolicy(const QGesture* self);
struct miqt_string QGesture_tr2(const char* s, const char* c);
struct miqt_string QGesture_tr3(const char* s, const char* c, int n);
QMetaObject* QGesture_virtualbase_metaObject(const VirtualQGesture* self);
void* QGesture_virtualbase_metacast(VirtualQGesture* self, const char* param1);
int QGesture_virtualbase_metacall(VirtualQGesture* self, int param1, int param2, void** param3);
bool QGesture_virtualbase_event(VirtualQGesture* self, QEvent* event);
bool QGesture_virtualbase_eventFilter(VirtualQGesture* self, QObject* watched, QEvent* event);
void QGesture_virtualbase_timerEvent(VirtualQGesture* self, QTimerEvent* event);
void QGesture_virtualbase_childEvent(VirtualQGesture* self, QChildEvent* event);
void QGesture_virtualbase_customEvent(VirtualQGesture* self, QEvent* event);
void QGesture_virtualbase_connectNotify(VirtualQGesture* self, QMetaMethod* signal);
void QGesture_virtualbase_disconnectNotify(VirtualQGesture* self, QMetaMethod* signal);
QObject* QGesture_protectedbase_sender(const VirtualQGesture* self);
int QGesture_protectedbase_senderSignalIndex(const VirtualQGesture* self);
int QGesture_protectedbase_receivers(const VirtualQGesture* self, const char* signal);
bool QGesture_protectedbase_isSignalConnected(const VirtualQGesture* self, QMetaMethod* signal);
const QMetaObject* QGesture_staticMetaObject();
typedef struct VirtualQPanGesture VirtualQPanGesture;
typedef struct QPanGesture_VTable{
	void (*destructor)(VirtualQPanGesture* self);
	QMetaObject* (*metaObject)(const VirtualQPanGesture* self);
	void* (*metacast)(VirtualQPanGesture* self, const char* param1);
	int (*metacall)(VirtualQPanGesture* self, int param1, int param2, void** param3);
	bool (*event)(VirtualQPanGesture* self, QEvent* event);
	bool (*eventFilter)(VirtualQPanGesture* self, QObject* watched, QEvent* event);
	void (*timerEvent)(VirtualQPanGesture* self, QTimerEvent* event);
	void (*childEvent)(VirtualQPanGesture* self, QChildEvent* event);
	void (*customEvent)(VirtualQPanGesture* self, QEvent* event);
	void (*connectNotify)(VirtualQPanGesture* self, QMetaMethod* signal);
	void (*disconnectNotify)(VirtualQPanGesture* self, QMetaMethod* signal);
}QPanGesture_VTable;
VirtualQPanGesture* QPanGesture_new(const QPanGesture_VTable* vtbl, size_t vdata);
VirtualQPanGesture* QPanGesture_new2(const QPanGesture_VTable* vtbl, size_t vdata, QObject* parent);
QMetaObject* QPanGesture_metaObject(const QPanGesture* self);
void* QPanGesture_metacast(QPanGesture* self, const char* param1);
int QPanGesture_metacall(QPanGesture* self, int param1, int param2, void** param3);
struct miqt_string QPanGesture_tr(const char* s);
QPointF* QPanGesture_lastOffset(const QPanGesture* self);
QPointF* QPanGesture_offset(const QPanGesture* self);
QPointF* QPanGesture_delta(const QPanGesture* self);
double QPanGesture_acceleration(const QPanGesture* self);
void QPanGesture_setLastOffset(QPanGesture* self, QPointF* value);
void QPanGesture_setOffset(QPanGesture* self, QPointF* value);
void QPanGesture_setAcceleration(QPanGesture* self, double value);
struct miqt_string QPanGesture_tr2(const char* s, const char* c);
struct miqt_string QPanGesture_tr3(const char* s, const char* c, int n);
QMetaObject* QPanGesture_virtualbase_metaObject(const VirtualQPanGesture* self);
void* QPanGesture_virtualbase_metacast(VirtualQPanGesture* self, const char* param1);
int QPanGesture_virtualbase_metacall(VirtualQPanGesture* self, int param1, int param2, void** param3);
bool QPanGesture_virtualbase_event(VirtualQPanGesture* self, QEvent* event);
bool QPanGesture_virtualbase_eventFilter(VirtualQPanGesture* self, QObject* watched, QEvent* event);
void QPanGesture_virtualbase_timerEvent(VirtualQPanGesture* self, QTimerEvent* event);
void QPanGesture_virtualbase_childEvent(VirtualQPanGesture* self, QChildEvent* event);
void QPanGesture_virtualbase_customEvent(VirtualQPanGesture* self, QEvent* event);
void QPanGesture_virtualbase_connectNotify(VirtualQPanGesture* self, QMetaMethod* signal);
void QPanGesture_virtualbase_disconnectNotify(VirtualQPanGesture* self, QMetaMethod* signal);
QObject* QPanGesture_protectedbase_sender(const VirtualQPanGesture* self);
int QPanGesture_protectedbase_senderSignalIndex(const VirtualQPanGesture* self);
int QPanGesture_protectedbase_receivers(const VirtualQPanGesture* self, const char* signal);
bool QPanGesture_protectedbase_isSignalConnected(const VirtualQPanGesture* self, QMetaMethod* signal);
const QMetaObject* QPanGesture_staticMetaObject();
QMetaObject* QPinchGesture_metaObject(const QPinchGesture* self);
void* QPinchGesture_metacast(QPinchGesture* self, const char* param1);
int QPinchGesture_metacall(QPinchGesture* self, int param1, int param2, void** param3);
struct miqt_string QPinchGesture_tr(const char* s);
int QPinchGesture_totalChangeFlags(const QPinchGesture* self);
void QPinchGesture_setTotalChangeFlags(QPinchGesture* self, int value);
int QPinchGesture_changeFlags(const QPinchGesture* self);
void QPinchGesture_setChangeFlags(QPinchGesture* self, int value);
QPointF* QPinchGesture_startCenterPoint(const QPinchGesture* self);
QPointF* QPinchGesture_lastCenterPoint(const QPinchGesture* self);
QPointF* QPinchGesture_centerPoint(const QPinchGesture* self);
void QPinchGesture_setStartCenterPoint(QPinchGesture* self, QPointF* value);
void QPinchGesture_setLastCenterPoint(QPinchGesture* self, QPointF* value);
void QPinchGesture_setCenterPoint(QPinchGesture* self, QPointF* value);
double QPinchGesture_totalScaleFactor(const QPinchGesture* self);
double QPinchGesture_lastScaleFactor(const QPinchGesture* self);
double QPinchGesture_scaleFactor(const QPinchGesture* self);
void QPinchGesture_setTotalScaleFactor(QPinchGesture* self, double value);
void QPinchGesture_setLastScaleFactor(QPinchGesture* self, double value);
void QPinchGesture_setScaleFactor(QPinchGesture* self, double value);
double QPinchGesture_totalRotationAngle(const QPinchGesture* self);
double QPinchGesture_lastRotationAngle(const QPinchGesture* self);
double QPinchGesture_rotationAngle(const QPinchGesture* self);
void QPinchGesture_setTotalRotationAngle(QPinchGesture* self, double value);
void QPinchGesture_setLastRotationAngle(QPinchGesture* self, double value);